# tomway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  hagl.sln  hagl.vcxproj  hagl.vcxproj.filters  tomway.sln  tomway.vcxproj
.run/: Perf - Tracy.run.xml  Tracy Server.run.xml
assets/audio/: LICENSES.txt
include/: CameraController.h  Cell.h  CellContainer.h  CellGeometry.h  Hagl.h  HaglConstants.h  HaglUtility.h  InputEvent.h  RenderSystem.h  SimulationSystem.h  TimeSystem.h  Tomway.h  Transform.h  Vertex.h  WindowSystem.h  camera_controller.h  engine.h  input_event.h  render_system.h  time_system.h  tomway_constants.h  tomway_utility.h  ui_system.h  window_system.h
include/audio/: Audio.h  AudioSystem.h  Channel.h  audio_config.h  audio_system.h
include/input/: InputSystem.h  input_system.h
include/render/: VertexChunk.h  cell_geometry.h  render_system.h  vertex_chunk.h
include/simulation/: Cell.h  CellContainer.h  SimulationSystem.h  cell_container.h  (+2 more)
shaders/: shader.frag  shader.vert
src/: CameraController.cpp  Cell.cpp  CellContainer.cpp  CellGeometry.cpp  Hagl.cpp  HaglConstants.cpp  HaglUtility.cpp  InputEvent.cpp  RenderSystem.cpp  SimulationSystem.cpp  TimeSystem.cpp  Tomway.cpp  Transform.cpp  Vertex.cpp  WindowSystem.cpp  camera_controller.cpp  cell_geometry.cpp  engine.cpp  input_event.cpp  render_system.cpp  time_system.cpp  tomway_constants.cpp  tomway_utility.cpp  ui_system.cpp  window_system.cpp
test/: 600.json  invalid_cell_object.json  invalid_cell_wrong_data_type.json  invalid_cells_bigger_than_grid_size.json  invalid_cells_missing.json  invalid_cells_wrong_type.json
tools/: collect_perf_data.bat
(+18 files in other folders)
